# poster-sentry

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
models/: poster_sentry_head.npz
poster_sentry/: __init__.py  __main__.py  classifier.py  cli.py  features.py
tests/: test_features.py
